# BPP_Reincarnation

./: README.md  meson.build
include/: Reincarnation.hpp  Soul.hpp  best-fit.hpp
inputs/: instancia20.txt  instancia200.txt  instancia2000.txt
src/: Reincarnation.cpp  instance-gen.cpp  main.cpp
